--- a/package.json
+++ b/package.json
@@ -5,18 +5,36 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "-": "^0.0.1",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/poppins": "^4.5.0",
+    "@fontsource/raleway": "^4.5.0",
     "gatsby": "^3.13.0",
+    "gatsby-core-utils": "^2.13.0",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-emotion": "^6.13.0",
+    "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
+    "gatsby-plugin-react-svg": "^3.0.1",
     "gatsby-plugin-sharp": "^3.13.0",
+    "gatsby-source-contentful": "^5.13.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-google-recaptcha-v3": "^1.9.5",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.15.3",
+    "react-use": "^17.3.1",
+    "typescript": "^4.4.3",
+    "typescript-language-server": "^0.6.2",
+    "wavesurfer.js": "^5.2.0"
   },
   "devDependencies": {
     "prettier": "2.3.2"
